--- a/src/main/resources/assets/exquisito/lang/zh_hk.json
+++ b/src/main/resources/assets/exquisito/lang/zh_hk.json
@@ -11,12 +11,22 @@
     "block.exquisito.nightshade_berry_cake": "夜影漿果蛋糕",
     "block.exquisito.zure_berry_cake": "天藍莓蛋糕",
 
+    "block.exquisito.elmond_block": "楄兆仁塊",
+    "block.exquisito.warzipan_block": "楄兆仁膏塊",
+    "block.exquisito.warzipan_bricks": "楄兆仁膏磚",
+    "block.exquisito.warzipan_brick_slab": "楄兆仁膏磚半磚",
+    "block.exquisito.dessert_checkered_bricks": "甜點格紋磚",
+    "block.exquisito.dessert_checkered_brick_slab": "甜點格紋磚半磚",
+    "block.exquisito.battenlight": "巴騰燈",
+
     "effect.exquisito.earendel": "渺遠晨星",
     "effect.exquisito.earendel.description": "該效果將在周邊光照等級高於7時治療範圍內持有發光效果的生物並將未持有者擊退",
     "effect.exquisito.fuchsia_goo": "品紅粘質",
     "effect.exquisito.fuchsia_goo.description": "該效果通過近戰攻擊在生物間傳播，以降低移動速度為代價減免宿主所受傷害，當其持續時間結束時宿主將被垂直彈出",
     "effect.exquisito.morgoth": "驚狂",
     "effect.exquisito.morgoth.description": "當效果持有者主手持有近戰武器且周邊光照等級低於7時，對范圍內生物造成群體魔法傷害",
+    "effect.exquisito.modulation": "調諧",
+    "effect.exquisito.modulation.description": "當效果持有者進行某些行為時轉化為對應的功能性效果",
     "effect.exquisito.resonance": "共鳴",
     "effect.exquisito.resonance.description": "當效果持有者對生物造成傷害時，同其調換位置",
     "effect.exquisito.space_diving": "深空俯潛",
@@ -28,6 +38,13 @@
     "item.exquisito.chorus_cake_slice": "歌萊蛋糕切片",
     "item.exquisito.chorus_milkshake": "歌萊奶昔",
     "item.exquisito.chorus_cookie": "歌萊曲奇",
+
+    "item.exquisito.elmond": "楄兆仁",
+    "item.exquisito.warzipan": "楄兆仁膏",
+    "item.exquisito.zure_berry_warzipan": "天藍莓形楄兆仁膏",
+    "item.exquisito.ether_bulb_warzipan": "以太球果形楄兆仁膏",
+    "item.exquisito.jelly_ring_warzipan": "甜膠環形楄兆仁膏",
+    "item.exquisito.nightshade_berry_warzipan": "夜影漿果形楄兆仁膏",
 
     "item.exquisito.ether_bulb_ice_cream": "以太球果雪糕",
     "item.exquisito.ether_bulb_cake": "以太球果蛋糕",
