End Elmond and Milkshake Cauldrons

--- a/src/main/resources/assets/exquisito/lang/en_us.json
+++ b/src/main/resources/assets/exquisito/lang/en_us.json
@@ -5,6 +5,10 @@
     "block.exquisito.nightshade_berry_ice_cream_block": "Nightshade Berry Ice Cream Block",
     "block.exquisito.zure_berry_ice_cream_block": "Azure Berry Ice Cream Block",
 
+    "block.exquisito.chorus_milkshake_cauldron": "Chorus Milkshake Cauldron",
+    "block.exquisito.jelly_ring_milkshake_cauldron": "Jelly Ring Milkshake Cauldron",
+    "block.exquisito.zure_berry_milkshake_cauldron": "Azure Berry Milkshake Cauldron",
+
     "block.exquisito.chorus_cake": "Chorus Cake",
     "block.exquisito.ether_bulb_cake": "Ether Bulb Cake",
     "block.exquisito.jelly_ring_cake": "Jelly Ring Cake",
