--- a/src/main/resources/assets/exquisito/lang/zh_cn.json
+++ b/src/main/resources/assets/exquisito/lang/zh_cn.json
@@ -5,6 +5,10 @@
     "block.exquisito.nightshade_berry_ice_cream_block": "夜影浆果冰淇淋块",
     "block.exquisito.zure_berry_ice_cream_block": "天蓝莓冰淇淋块",
 
+    "block.exquisito.chorus_milkshake_cauldron": "装有紫颂奶昔的炼药锅",
+    "block.exquisito.jelly_ring_milkshake_cauldron": "装有甜胶环奶昔的炼药锅",
+    "block.exquisito.zure_berry_milkshake_cauldron": "装有天蓝莓奶昔的炼药锅",
+
     "block.exquisito.chorus_cake": "紫颂蛋糕",
     "block.exquisito.ether_bulb_cake": "以太球果蛋糕",
     "block.exquisito.jelly_ring_cake": "甜胶环蛋糕",
@@ -26,7 +30,7 @@
     "effect.exquisito.morgoth": "暗夜慌踪",
     "effect.exquisito.morgoth.description": "当效果持有者主手持有近战武器且周边光照等级低于7时，对范围内生物造成群体魔法伤害",
     "effect.exquisito.modulation": "调谐",
-    "effect.exquisito.modulation.description": "当效果持有者进行某些行为时转化为对应的功能性效果",
+    "effect.exquisito.modulation.description": "当效果持有者进行某些特定行为时转化为对应的功能性效果",
     "effect.exquisito.resonance": "共鸣",
     "effect.exquisito.resonance.description": "当效果持有者对生物造成伤害时，同其调换位置",
     "effect.exquisito.space_diving": "深空俯潜",
