End Elmond and Milkshake Cauldrons

--- a/src/main/resources/assets/exquisito/lang/zh_hk.json
+++ b/src/main/resources/assets/exquisito/lang/zh_hk.json
@@ -5,6 +5,10 @@
     "block.exquisito.nightshade_berry_ice_cream_block": "夜影漿果雪糕塊",
     "block.exquisito.zure_berry_ice_cream_block": "天藍莓雪糕塊",
 
+    "block.exquisito.chorus_milkshake_cauldron": "裝歌萊奶昔的鍋釜",
+    "block.exquisito.jelly_ring_milkshake_cauldron": "裝甜膠環奶昔的鍋釜",
+    "block.exquisito.zure_berry_milkshake_cauldron": "裝天藍莓奶昔的鍋釜",
+
     "block.exquisito.chorus_cake": "歌萊蛋糕",
     "block.exquisito.ether_bulb_cake": "以太球果蛋糕",
     "block.exquisito.jelly_ring_cake": "甜膠環蛋糕",
