--- a/src/main/resources/assets/exquisito/lang/en_us.json
+++ b/src/main/resources/assets/exquisito/lang/en_us.json
@@ -21,6 +21,12 @@
     "block.exquisito.warzipan_brick_slab": "Warzipan Brick Slab",
     "block.exquisito.dessert_checkered_bricks": "Dessert Checkered Bricks",
     "block.exquisito.dessert_checkered_brick_slab": "Dessert Checkered Brick Slab",
+    "block.exquisito.carmotine_block": "Carmotine Block",
+    "block.exquisito.carmotine_bricks": "Carmotine Bricks",
+    "block.exquisito.carmotine_ladder": "Carmotine Ladder",
+    "block.exquisito.carmotine_pillar": "Carmotine Pillar",
+    "block.exquisito.weathered_carmotine_mural": "Weathered Carmotine Mural",
+    "block.exquisito.ruined_carmotine_mural": "Ruined Carmotine Mural",
     "block.exquisito.battenlight": "Battenlight",
 
     "effect.exquisito.earendel": "Earendel",
