--- a/src/main/resources/assets/exquisito/lang/zh_cn.json
+++ b/src/main/resources/assets/exquisito/lang/zh_cn.json
@@ -15,12 +15,18 @@
     "block.exquisito.nightshade_berry_cake": "夜影浆果蛋糕",
     "block.exquisito.zure_berry_cake": "天蓝莓蛋糕",
 
-    "block.exquisito.elmond_block": "楄兆仁块",
-    "block.exquisito.warzipan_block": "楄兆仁膏块",
-    "block.exquisito.warzipan_bricks": "楄兆仁膏砖",
-    "block.exquisito.warzipan_brick_slab": "楄兆仁膏砖台阶",
+    "block.exquisito.elmond_block": "楄兆脂块",
+    "block.exquisito.warzipan_block": "楄兆膏块",
+    "block.exquisito.warzipan_bricks": "楄兆膏砖",
+    "block.exquisito.warzipan_brick_slab": "楄兆膏砖台阶",
     "block.exquisito.dessert_checkered_bricks": "甜点格纹砖",
     "block.exquisito.dessert_checkered_brick_slab": "甜点格纹砖台阶",
+    "block.exquisito.carmotine_block": "赭玉块",
+    "block.exquisito.carmotine_bricks": "赭玉砖",
+    "block.exquisito.carmotine_ladder": "赭玉梯",
+    "block.exquisito.carmotine_pillar": "赭玉柱",
+    "block.exquisito.weathered_carmotine_mural": "受蚀的赭玉壁画",
+    "block.exquisito.ruined_carmotine_mural": "损毁的赭玉壁画",
     "block.exquisito.battenlight": "巴腾灯",
 
     "effect.exquisito.earendel": "渺远晨星",
@@ -43,12 +49,12 @@
     "item.exquisito.chorus_milkshake": "紫颂奶昔",
     "item.exquisito.chorus_cookie": "紫颂曲奇",
 
-    "item.exquisito.elmond": "楄兆仁",
-    "item.exquisito.warzipan": "楄兆仁膏",
-    "item.exquisito.zure_berry_warzipan": "天蓝莓形楄兆仁膏",
-    "item.exquisito.ether_bulb_warzipan": "以太球果形楄兆仁膏",
-    "item.exquisito.jelly_ring_warzipan": "甜胶环形楄兆仁膏",
-    "item.exquisito.nightshade_berry_warzipan": "夜影浆果形楄兆仁膏",
+    "item.exquisito.elmond": "楄兆脂",
+    "item.exquisito.warzipan": "楄兆膏",
+    "item.exquisito.zure_berry_warzipan": "天蓝莓形楄兆膏",
+    "item.exquisito.ether_bulb_warzipan": "以太球果形楄兆膏",
+    "item.exquisito.jelly_ring_warzipan": "甜胶环形楄兆膏",
+    "item.exquisito.nightshade_berry_warzipan": "夜影浆果形楄兆膏",
 
     "item.exquisito.ether_bulb_ice_cream": "以太球果冰淇淋",
     "item.exquisito.ether_bulb_cake": "以太球果蛋糕",
