--- a/src/main/resources/assets/exquisito/lang/zh_hk.json
+++ b/src/main/resources/assets/exquisito/lang/zh_hk.json
@@ -15,12 +15,18 @@
     "block.exquisito.nightshade_berry_cake": "夜影漿果蛋糕",
     "block.exquisito.zure_berry_cake": "天藍莓蛋糕",
 
-    "block.exquisito.elmond_block": "楄兆仁塊",
-    "block.exquisito.warzipan_block": "楄兆仁膏塊",
-    "block.exquisito.warzipan_bricks": "楄兆仁膏磚",
-    "block.exquisito.warzipan_brick_slab": "楄兆仁膏磚半磚",
+    "block.exquisito.elmond_block": "楄兆塊",
+    "block.exquisito.warzipan_block": "楄兆膏塊",
+    "block.exquisito.warzipan_bricks": "楄兆膏磚",
+    "block.exquisito.warzipan_brick_slab": "楄兆膏磚半磚",
     "block.exquisito.dessert_checkered_bricks": "甜點格紋磚",
     "block.exquisito.dessert_checkered_brick_slab": "甜點格紋磚半磚",
+    "block.exquisito.carmotine_block": "赭玉塊",
+    "block.exquisito.carmotine_bricks": "赭玉磚",
+    "block.exquisito.carmotine_ladder": "赭玉梯",
+    "block.exquisito.carmotine_pillar": "赭玉柱",
+    "block.exquisito.weathered_carmotine_mural": "Weathered Carmotine Mural",
+    "block.exquisito.ruined_carmotine_mural": "Ruined Carmotine Mural",
     "block.exquisito.battenlight": "巴騰燈",
 
     "effect.exquisito.earendel": "渺遠晨星",
@@ -43,12 +49,12 @@
     "item.exquisito.chorus_milkshake": "歌萊奶昔",
     "item.exquisito.chorus_cookie": "歌萊曲奇",
 
-    "item.exquisito.elmond": "楄兆仁",
-    "item.exquisito.warzipan": "楄兆仁膏",
-    "item.exquisito.zure_berry_warzipan": "天藍莓形楄兆仁膏",
-    "item.exquisito.ether_bulb_warzipan": "以太球果形楄兆仁膏",
-    "item.exquisito.jelly_ring_warzipan": "甜膠環形楄兆仁膏",
-    "item.exquisito.nightshade_berry_warzipan": "夜影漿果形楄兆仁膏",
+    "item.exquisito.elmond": "楄兆脂",
+    "item.exquisito.warzipan": "楄兆膏",
+    "item.exquisito.zure_berry_warzipan": "天藍莓形楄兆膏",
+    "item.exquisito.ether_bulb_warzipan": "以太球果形楄兆膏",
+    "item.exquisito.jelly_ring_warzipan": "甜膠環形楄兆膏",
+    "item.exquisito.nightshade_berry_warzipan": "夜影漿果形楄兆膏",
 
     "item.exquisito.ether_bulb_ice_cream": "以太球果雪糕",
     "item.exquisito.ether_bulb_cake": "以太球果蛋糕",
