--- a/src/main/resources/assets/exquisito/lang/en_us.json
+++ b/src/main/resources/assets/exquisito/lang/en_us.json
@@ -22,7 +22,11 @@
     "block.exquisito.dessert_checkered_bricks": "Dessert Checkered Bricks",
     "block.exquisito.dessert_checkered_brick_slab": "Dessert Checkered Brick Slab",
     "block.exquisito.carmotine_block": "Carmotine Block",
+    "block.exquisito.carmotine_slab": "Carmotine Slab",
+    "block.exquisito.carmotine_stairs": "Carmotine Stairs",
     "block.exquisito.carmotine_bricks": "Carmotine Bricks",
+    "block.exquisito.carmotine_brick_slab": "Carmotine Brick Slab",
+    "block.exquisito.carmotine_brick_stairs": "Carmotine Brick Stairs",
     "block.exquisito.carmotine_ladder": "Carmotine Ladder",
     "block.exquisito.carmotine_pillar": "Carmotine Pillar",
     "block.exquisito.weathered_carmotine_mural": "Weathered Carmotine Mural",
@@ -42,6 +46,11 @@
     "effect.exquisito.space_diving": "Space Diving",
     "effect.exquisito.space_diving.description": "When the user takes fall damage, creating a ranged strike around the landing site and saving the player from falling to death if necessary.",
 
+    "effect.exquisito.diver_down": "Diver Down",
+    "effect.exquisito.love_deluxe": "Love Deluxe",
+    "effect.exquisito.monkey_majik": "Monkey Majik",
+    "effect.exquisito.oblivion": "Oblivion",
+
     "item.exquisito.chorus_ice_cream": "Chorus Ice Cream",
     "item.exquisito.chorus_cake": "Chorus Cake",
     "item.exquisito.chorus_khanom_chan": "Chorus Khanom Chan",
@@ -55,6 +64,9 @@
     "item.exquisito.ether_bulb_warzipan": "Ether Bulb-shaped Warzipan",
     "item.exquisito.jelly_ring_warzipan": "Jelly Ring-shaped Warzipan",
     "item.exquisito.nightshade_berry_warzipan": "Nightshade Berry-shaped Warzipan",
+
+    "item.exquisito.beloved_battenberg_cake": "Beloved Battenberg Cake",
+    "item.exquisito.enlightened_battenberg_cake": "Enlightened Battenberg Cake",
 
     "item.exquisito.ether_bulb_ice_cream": "Ether Bulb Ice Cream",
     "item.exquisito.ether_bulb_cake": "Ether Bulb Cake",
@@ -83,7 +95,6 @@
     "item.exquisito.zure_berry_milkshake": "Azure Berry Milkshake",
     "item.exquisito.zure_berry_cookie": "Azure Berry Cookie",
 
-    "item.exquisito.enlightened_battenberg_cake": "Enlightened Battenberg Cake",
     "item.exquisito.chocolate_ringling": "Chocolate Ringling",
     "item.exquisito.enderneath_salad": "Enderneath Salad",
     "item.exquisito.fuschia_smoothie_bowl": "Fuschia Smoothie Bowl",
