--- a/src/main/resources/assets/exquisito/lang/zh_cn.json
+++ b/src/main/resources/assets/exquisito/lang/zh_cn.json
@@ -31,6 +31,7 @@
     "block.exquisito.carmotine_pillar": "赭玉柱",
     "block.exquisito.weathered_carmotine_mural": "受蚀的赭玉壁画",
     "block.exquisito.ruined_carmotine_mural": "损毁的赭玉壁画",
+    "block.exquisito.abandoned_vessel": "弃置的容器",
     "block.exquisito.battenlight": "巴腾灯",
 
     "effect.exquisito.earendel": "渺远晨星",
@@ -58,6 +59,7 @@
     "item.exquisito.chorus_milkshake": "紫颂奶昔",
     "item.exquisito.chorus_cookie": "紫颂曲奇",
 
+    "item.exquisito.carmotine": "赭玉",
     "item.exquisito.elmond": "楄兆脂",
     "item.exquisito.warzipan": "楄兆膏",
     "item.exquisito.zure_berry_warzipan": "天蓝莓形楄兆膏",
