--- a/src/main/resources/assets/exquisito/lang/zh_hk.json
+++ b/src/main/resources/assets/exquisito/lang/zh_hk.json
@@ -22,11 +22,16 @@
     "block.exquisito.dessert_checkered_bricks": "甜點格紋磚",
     "block.exquisito.dessert_checkered_brick_slab": "甜點格紋磚半磚",
     "block.exquisito.carmotine_block": "赭玉塊",
+    "block.exquisito.carmotine_slab": "Carmotine Slab",
+    "block.exquisito.carmotine_stairs": "Carmotine Stairs",
     "block.exquisito.carmotine_bricks": "赭玉磚",
+    "block.exquisito.carmotine_brick_slab": "Carmotine Brick Slab",
+    "block.exquisito.carmotine_brick_stairs": "Carmotine Brick Stairs",
     "block.exquisito.carmotine_ladder": "赭玉梯",
     "block.exquisito.carmotine_pillar": "赭玉柱",
     "block.exquisito.weathered_carmotine_mural": "Weathered Carmotine Mural",
     "block.exquisito.ruined_carmotine_mural": "Ruined Carmotine Mural",
+    "block.exquisito.abandoned_vessel": "棄置的容器",
     "block.exquisito.battenlight": "巴騰燈",
 
     "effect.exquisito.earendel": "渺遠晨星",
@@ -42,6 +47,11 @@
     "effect.exquisito.space_diving": "深空俯潛",
     "effect.exquisito.space_diving.description": "當效果持有者受到摔落傷害時，令其免於因此次傷害而死並轟飛著陸點周邊生物",
 
+    "effect.exquisito.diver_down": "Diver Down",
+    "effect.exquisito.love_deluxe": "Love Deluxe",
+    "effect.exquisito.monkey_majik": "Monkey Majik",
+    "effect.exquisito.oblivion": "Oblivion",
+
     "item.exquisito.chorus_ice_cream": "歌萊雪糕",
     "item.exquisito.chorus_cake": "歌萊蛋糕",
     "item.exquisito.chorus_khanom_chan": "歌萊千層糕",
@@ -49,12 +59,16 @@
     "item.exquisito.chorus_milkshake": "歌萊奶昔",
     "item.exquisito.chorus_cookie": "歌萊曲奇",
 
+    "item.exquisito.carmotine": "Carmotine",
     "item.exquisito.elmond": "楄兆脂",
     "item.exquisito.warzipan": "楄兆膏",
     "item.exquisito.zure_berry_warzipan": "天藍莓形楄兆膏",
     "item.exquisito.ether_bulb_warzipan": "以太球果形楄兆膏",
     "item.exquisito.jelly_ring_warzipan": "甜膠環形楄兆膏",
     "item.exquisito.nightshade_berry_warzipan": "夜影漿果形楄兆膏",
+
+    "item.exquisito.beloved_battenberg_cake": "Beloved Battenberg Cake",
+    "item.exquisito.enlightened_battenberg_cake": "启蒙巴滕伯格蛋糕",
 
     "item.exquisito.ether_bulb_ice_cream": "以太球果雪糕",
     "item.exquisito.ether_bulb_cake": "以太球果蛋糕",
@@ -83,7 +97,6 @@
     "item.exquisito.zure_berry_milkshake": "天藍莓奶昔",
     "item.exquisito.zure_berry_cookie": "天藍莓曲奇",
 
-    "item.exquisito.enlightened_battenberg_cake": "启蒙巴滕伯格蛋糕",
     "item.exquisito.chocolate_ringling": "朱古力環靈",
     "item.exquisito.enderneath_salad": "末隱沙律",
     "item.exquisito.fuschia_smoothie_bowl": "品红思慕雪碗",
