tweaks and crate

--- a/src/main/resources/assets/exquisito/lang/en_us.json
+++ b/src/main/resources/assets/exquisito/lang/en_us.json
@@ -19,8 +19,11 @@
     "block.exquisito.warzipan_block": "Warzipan Block",
     "block.exquisito.warzipan_bricks": "Warzipan Bricks",
     "block.exquisito.warzipan_brick_slab": "Warzipan Brick Slab",
+    "block.exquisito.warzipan_brick_stairs": "Warzipan Brick Stairs",
     "block.exquisito.dessert_checkered_bricks": "Dessert Checkered Bricks",
     "block.exquisito.dessert_checkered_brick_slab": "Dessert Checkered Brick Slab",
+    "block.exquisito.dessert_checkered_brick_stairs": "Dessert Checkered Brick Stairs",
+
     "block.exquisito.carmotine_block": "Carmotine Block",
     "block.exquisito.carmotine_slab": "Carmotine Slab",
     "block.exquisito.carmotine_stairs": "Carmotine Stairs",
