--- a/src/main/resources/assets/exquisito/lang/en_us.json
+++ b/src/main/resources/assets/exquisito/lang/en_us.json
@@ -15,6 +15,8 @@
     "block.exquisito.nightshade_berry_cake": "Nightshade Berry Cake",
     "block.exquisito.zure_berry_cake": "Azure Berry Cake",
 
+    "block.exquisito.jelly_ring_crate": "Jelly Ring Crate",
+
     "block.exquisito.elmond_block": "Elmond Block",
     "block.exquisito.warzipan_block": "Warzipan Block",
     "block.exquisito.warzipan_bricks": "Warzipan Bricks",
