--- a/src/main/resources/assets/exquisito/lang/zh_cn.json
+++ b/src/main/resources/assets/exquisito/lang/zh_cn.json
@@ -15,12 +15,17 @@
     "block.exquisito.nightshade_berry_cake": "夜影浆果蛋糕",
     "block.exquisito.zure_berry_cake": "天蓝莓蛋糕",
 
+    "block.exquisito.jelly_ring_crate": "箱装甜胶环",
+
     "block.exquisito.elmond_block": "楄兆脂块",
     "block.exquisito.warzipan_block": "楄兆膏块",
     "block.exquisito.warzipan_bricks": "楄兆膏砖",
     "block.exquisito.warzipan_brick_slab": "楄兆膏砖台阶",
+    "block.exquisito.warzipan_brick_stairs": "楄兆膏砖楼梯",
     "block.exquisito.dessert_checkered_bricks": "甜点格纹砖",
     "block.exquisito.dessert_checkered_brick_slab": "甜点格纹砖台阶",
+    "block.exquisito.dessert_checkered_brick_stairs": "甜点格纹砖楼梯",
+
     "block.exquisito.carmotine_block": "赭玉块",
     "block.exquisito.carmotine_slab": "赭玉台阶",
     "block.exquisito.carmotine_stairs": "赭玉楼梯",
